force-app/main/default/objects/custom_create378__c/custom_create378__c.object-meta.xml
<CustomObject>
    <label>Custom created object378</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects378</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>