force-app/main/default/objects/custom_create378__c/fields/custom_create_378field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_378field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 378field501</label>
    <type>Checkbox</type>
</CustomField>